# Prototype

./: CMakeLists.txt  README
Code/Boot/: CMakeLists.txt  apBoot.cpp
Code/C++/: CMakeLists.txt  enAlloc.cpp  enAlloc.h  enAssert.cpp  enAssert.h  enColorC4.cpp  enColorC4.h  enDList.cpp  enDList.h  enF2.cpp  enF2.h  enF3.cpp  enF3.h  enF4.cpp  enF4.h  enLineF3.cpp  enLineF3.h  enMatrix.cpp  enMatrix.h  enRnd.cpp  enRnd.h  enStream.cpp  enStream.h  enTPtrList.cpp  enTPtrList.h  enVertexPC.cpp  enVertexPC.h  enVertexPCList.cpp  enVertexPCList.h
Code/Engine/: CMakeLists.txt  eiEngine.cpp  eiEngine.h
Code/Engine2Linux/: CMakeLists.txt  gwCamera.cpp  gwCamera.h  gwEngine.cpp  gwEngine.h  gwEntity.cpp  gwEntity.h  gwMesh.cpp  gwMesh.h
Code/Engine2Win32/: CMakeLists.txt  gwCamera.cpp  gwCamera.h  gwEngine.cpp  gwEngine.h  gwEntity.cpp  gwEntity.h  gwMesh.cpp  gwMesh.h
Code/Game/: CMakeLists.txt  gaCamera.cpp  gaCamera.h  gaMeshDrawer.cpp  gaMeshDrawer.h
Code/Games/: CMakeLists.txt
Code/Games/CityGame/: CMakeLists.txt  ciMain.cpp  ciMain.h
Code/Games/DungeonGame/: CMakeLists.txt  duMain.cpp  duMain.h
Code/Games/FPRTSGame/: CMakeLists.txt  fpMain.cpp  fpMain.h
Code/Games/FencingGame/: CMakeLists.txt  feMain.cpp  feMain.h
Code/Games/IGI/: CMakeLists.txt  igMain.cpp  igMain.h
Code/Games/RacingGame/: CMakeLists.txt  raMain.cpp  raMain.h
Code/Games/ShootingGame/: CMakeLists.txt  shCamera.cpp  shCamera.h  shMain.cpp  shMain.h  shMap.cpp  shMap.h  shPlayer.cpp  shPlayer.h
Code/Games/TestGame/: CMakeLists.txt  teMain.cpp  teMain.h
Code/Win32/: CMakeLists.txt
Code/Win32/di/: diCB.cpp  diCB.h  diDef.h  diDevice.cpp  diDevice.h  diDik2Keys.cpp  diDik2Keys.h  diEngine.cpp  diEngine.h  diKbd.cpp  diKbd.h  diKeys.h  diMouse.cpp  diMouse.h
Code/Win32/dx/: dxBoot.cpp  dxBoot.h  dxCamera.cpp  dxCamera.h  dxDef.h  dxDevice.cpp  dxDevice.h  dxDeviceFactory.cpp  dxDeviceFactory.h  dxDeviceInfo.cpp  dxDeviceInfo.h  dxEngine.cpp  dxEngine.h  dxLines.cpp  dxLines.h  dxRenderState.cpp  dxRenderState.h  dxTransformer.cpp  dxTransformer.h  dxTriangles.cpp  dxTriangles.h  dxVertexBuffer.cpp  dxVertexBuffer.h  dxVertexDeclarationCache.cpp  dxVertexDeclarationCache.h  dxWindow.cpp  dxWindow.h
Code/Win32/gdi/: gdiDef.h  gdiHwnd.cpp  gdiHwnd.h  gdiMsgQueue.cpp  gdiMsgQueue.h
Code/Win32/os/: osDef.h  osTimer.cpp  osTimer.h
