include_directories("../C++")
include_directories("../Engine")
include_directories("../Game")

add_subdirectory(CityGame)
add_subdirectory(DungeonGame)
add_subdirectory(FencingGame)
add_subdirectory(FPRTSGame)
add_subdirectory(IGI)
add_subdirectory(RacingGame)
add_subdirectory(ShootingGame)
add_subdirectory(TestGame)
